axelor-web/src/main/webapp/css/view.form.css
/**
 * Axelor Business Solutions
 *
 * Copyright (C) 2012-2014 Axelor (<http://axelor.com>).
 *
 * This program is free software: you can redistribute it and/or  modify
 * it under the terms of the GNU Affero General Public License, version 3,
 * as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
/* FORM VIEW */

::-ms-clear {
  display: none;
}

.view-container .form-view > div:last-child {
	position: absolute;
	top: 42px;
	bottom: 0; left: 0; right: 0;
	overflow: auto;
}

.view-container .form-view > div.no-toolbar {
	top: 0;
}

.view-container .form-view > div[ui-view-form].has-width {
	padding: 8px 16px;
	background-color: #f7f7f9;
}

.view-container .form-view > div[ui-view-form].has-width > form {
	padding: 8px;
	background-color: #fff;
	
	border: 1px solid rgba(0, 0, 0, 0.2);
	border-radius: 4px;
	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
	
	width: 90%;
	min-width: 600px;
	overflow: auto;
}

.view-container .form-view .nested-editor form {
	width: inherit !important;
}

.ui-dialog-content > div[ui-view-form] {
	min-width: 320px;
}

form.dynamic-form {
	margin: 4px auto;
}

table.form-layout {
	width: 100%;
	border-collapse: collapse;
}

table.form-layout * {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	    -ms-box-sizing: border-box;
	        box-sizing: border-box;
}

table.form-debug,
table.form-debug td.form-label,
table.form-debug td.form-item {
	border: 1px solid #D14;
}

table.form-layout td.form-label,
table.form-layout td.form-item {
	padding: 2px;
	vertical-align: top;
}

table.form-layout td.form-label {
	text-align: left;
	padding-left: 8px;
	padding-right: 4px;
	width: 15%;
	min-width: 100px;
}

table.form-layout td.form-item.boolean-item {
	vertical-align: inherit;
}

table.form-layout td.form-label > label {
	padding-top: 3px;
	margin-bottom: 0px;
	font-weight: bold;
	cursor: inherit;
}

table.form-layout td.form-label > label > span {
	cursor: pointer;
}

table.form-layout td.form-label label.required {
	color: #B94A48;
}

table.form-layout td.form-label label.readonly {
	color: inherit;
}

table.form-layout td.form-item > *,
.form-item-container > * {
	width: 100%;
	margin: 0 !important;
}

.form-item-container > * {
	width: 100%;
}

table.form-layout td.form-item.v-align-top {
	vertical-align: top;	
}

.form-item-container,
.form-item-container > span.display-text {
	min-height: 26px;
	display: block;
}

.form-item-container {
	min-width: 26px;
}

.form-item-container > span.display-text {
	padding-top: 4px;
	padding-bottom: 2px;
}

.form-item-container input {
	height: 26px;
	padding: 2px 6px;
	min-width: 170px;
}

.form-item-container[style *= width] input {
	min-width: inherit;
}

.form-item-container.datetime-item .picker-input {
	min-width: 120px;
	width: 140px;
}

.form-item-container.time-item input {
	width: 60px;
	min-width: 40px;
}

.slick-cell .form-item-container {
	width: 100%;
}

.form-item-container input,
.form-item-container input:focus,
.form-item-container textarea,
.form-item-container textarea:focus {
	outline-style: none;
}

.form-item-container .small-input input,
.form-item-container input.small-input {
	min-width: 50px;
	height: 26px;
}

.form-item-container input[type="radio"],
.form-item-container input[type="checkbox"] {
	width: auto;
	min-width: inherit;
	height: inherit;
	margin-top: 6px !important;
}

.form-item-container label.checkbox {
	padding-right: 6px;
}

.form-item-container.readonly label.checkbox {
	cursor: default;
}

.form-item-container label.checkbox input[type="checkbox"] {
	margin-top: 4px !important;
}

.form-item > a.btn,
.form-item-container button {
	padding: 2px 10px 2px;
	min-width: 26px;
	height: 26px;
	overflow: hidden;
	white-space: nowrap;
}

.form-item-container textarea {
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	resize: vertical;
}

table.form-layout fieldset {
	padding: 4px 0;
}

.form-item-container.readonly > a,
.form-item-container.readonly > input,
.form-item-container.readonly > span.display-text {
	padding-left: 2px;
}

.form-item-container.readonly > a {
	line-height: 24px;
	color: #0088cc;
}

.form-item-container.datetime input {
	min-width: 100px;
}

.form-item-container.datetime-item input {
	min-width: 134px;
}

.form-item-container > input.display-text {
	min-width: 100px;
	text-overflow: ellipsis;
	overflow: hidden;
	border: none;
	border-radius: 0;
	box-shadow: none;
	background: transparent;
}

.form-item-container.many2one-item.readonly {
	padding-top: 1px;
}

.picker-input,
.form-item .ui-spinner {
	box-sizing: border-box;
	position: relative;
	display: inline-block;
}

.picker-input > input {
	margin: 0;
	width: 100%;
}

.picker-input > .picker-icons {
	position: absolute;
	display: inline-block;
	white-space: nowrap;

	top: 0;
	right: 3px;
	height: 100%;
}

.picker-input > .picker-icons > i.fa {
	cursor: pointer;
	margin-right: 1px;
	padding: 2px;
	padding-top: 3px;
	display: inline-block;
	line-height: 20px;
}

.picker-input > input,
.picker-icons-1 > input {
	padding-right: 18px !important;
}

.picker-icons-2 > input {
	padding-right: 36px !important;
}

.picker-icons-3 > input {
	padding-right: 54px !important;
}

.picker-icons-4 > input {
	padding-right: 72px !important;
}

table.form-layout .tabbable-tabs .nav-tabs {
	margin-bottom: 0px;
}

table.form-layout .tabbable-tabs .tab-content {
	position: relative;
	padding: 4px;
	border: 1px solid #DDD;
	border-top: 0;
	background-color: #fff;
}

table.form-layout td.form-item .stackbar {
	position: relative;
}
/* ... */

